# dyrel.py

./: LICENSE  README.md  pyproject.toml
sample/: family.py  relatives.py
script/: fool.py
src/dyrel/: __init__.py  _mechanics.py  api.py  clause.py  datum.py  defs.py  engine.py  phrase.py  projection.py  relation.py  rule.py  signature.py  snapshot.py  util.py  variable.py  word.py
