[project]
name = "dyrel.py"
version = "0.1.0"
description = "Dynamic relational engine embedded in Python"
readme = "README.md"
authors = [
    { name = "Serhii Mozghovyi", email = "egnartsms@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
