[project]
name = "dyrel"
version = "0.1.0"
description = "Dynamic relational engine embedded in Python"
readme = "README.md"
authors = [
    { name = "Serhii Mozghovyi", email = "egnartsms@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cached-property>=2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.3.0",
]
