[project]
name = "dyrel"
version = "0.1.0"
description = "Dynamic relational engine embedded in Python"
readme = "README.md"
authors = [
    { name = "Serhii Mozghovyi", email = "egnartsms@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "levenshtein>=0.27.1",
    "rpyc>=6.0.2",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.3.0",
]

[tool.ruff]
line-length = 90
indent-width = 4
target-version = "py313"
format.quote-style = "double"

[tool.ruff.lint]
isort.combine-as-imports = true
ignore = [
  "SIM108",  # Prefer if-else instead of ternary for readability.
]
select = [
  "F",    # Pyflakes; likely errors: https://docs.astral.sh/ruff/rules/#pyflakes-f
  # "PL",      # Pylint: https://docs.astral.sh/ruff/rules/#pylint-pl
  "I",    # Sort imports: https://docs.astral.sh/ruff/rules/#isort-i
  "SIM",  # Simplify code: https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
  "TC",   # Organize type-checking imports: https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
  "UP",   # Upgrade to modern Python syntax: https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "script/host.py",
]
